Task3 , Task4, Task6, Task7, Task8
Task3 , Task4, Task6, Task7, Task8

--- a/SourceCode/2023/August2023/Harish/Task4/Main.xaml
+++ b/SourceCode/2023/August2023/Harish/Task4/Main.xaml
@@ -73,7 +73,7 @@
       <AssemblyReference>System.Runtime.Serialization.Primitives</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Task4 - Generic Variables&#xD;&#xA;" DisplayName="Main Sequence- Generic Variable" sap:VirtualizedContainerService.HintSize="696,792.8" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Task4 - Generic Variables&#xA;" DisplayName="Main Sequence- Generic Variable" sap:VirtualizedContainerService.HintSize="696,792.8" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -83,10 +83,10 @@
     </sap:WorkflowViewStateService.ViewState>
     <Flowchart sap:VirtualizedContainerService.HintSize="633.6,636.8" sap2010:WorkflowViewState.IdRef="Flowchart_1">
       <Flowchart.Variables>
-        <Variable x:TypeArguments="ui:GenericValue" Name="Int" />
-        <Variable x:TypeArguments="ui:GenericValue" Name="Str" />
-        <Variable x:TypeArguments="x:String" Name="Result" />
-        <Variable x:TypeArguments="ui:GenericValue" Name="Var1" />
+        <Variable x:TypeArguments="x:Int32" Name="Int" />
+        <Variable x:TypeArguments="x:String" Name="Str" />
+        <Variable x:TypeArguments="ui:GenericValue" Name="Result" />
+        <Variable x:TypeArguments="x:Int32" Name="Var1" />
       </Flowchart.Variables>
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -108,9 +108,9 @@
             <av:PointCollection x:Key="ConnectorLocation">290,220.79999999999998 290,239.2</av:PointCollection>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
-        <Assign sap:VirtualizedContainerService.HintSize="433.6,81.6" sap2010:WorkflowViewState.IdRef="Assign_2">
+        <Assign DisplayName="Assign int to variable" sap:VirtualizedContainerService.HintSize="433.6,81.6" sap2010:WorkflowViewState.IdRef="Assign_2">
           <Assign.To>
-            <OutArgument x:TypeArguments="ui:GenericValue">[Var1]</OutArgument>
+            <OutArgument x:TypeArguments="x:Int32">[Var1]</OutArgument>
           </Assign.To>
           <Assign.Value>
             <InArgument x:TypeArguments="x:Int32">2</InArgument>
@@ -130,9 +130,9 @@
                 <av:PointCollection x:Key="ConnectorLocation">290,320.79999999999995 290,359.2</av:PointCollection>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <Assign sap:VirtualizedContainerService.HintSize="433.6,81.6" sap2010:WorkflowViewState.IdRef="Assign_3">
+            <Assign DisplayName="Assign String to Variable" sap:VirtualizedContainerService.HintSize="433.6,81.6" sap2010:WorkflowViewState.IdRef="Assign_3">
               <Assign.To>
-                <OutArgument x:TypeArguments="ui:GenericValue">[Str]</OutArgument>
+                <OutArgument x:TypeArguments="x:String">[Str]</OutArgument>
               </Assign.To>
               <Assign.Value>
                 <InArgument x:TypeArguments="x:String">String</InArgument>
@@ -152,12 +152,12 @@
                     <av:PointCollection x:Key="ConnectorLocation">290,440.79999999999995 290,490.79999999999995</av:PointCollection>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
-                <Assign sap:VirtualizedContainerService.HintSize="433.6,81.6" sap2010:WorkflowViewState.IdRef="Assign_4">
+                <Assign DisplayName="Assign String to Generic value" sap:VirtualizedContainerService.HintSize="433.6,81.6" sap2010:WorkflowViewState.IdRef="Assign_4">
                   <Assign.To>
-                    <OutArgument x:TypeArguments="x:String">[Result]</OutArgument>
+                    <OutArgument x:TypeArguments="ui:GenericValue">[Result]</OutArgument>
                   </Assign.To>
                   <Assign.Value>
-                    <InArgument x:TypeArguments="ui:GenericValue">[Int+Str]</InArgument>
+                    <InArgument x:TypeArguments="ui:GenericValue">[Str]</InArgument>
                   </Assign.Value>
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
