--- a/SourceCode/2023/August2023/Swapna/Task 3/Main.xaml
+++ b/SourceCode/2023/August2023/Swapna/Task 3/Main.xaml
@@ -100,7 +100,7 @@
             <av:PointCollection x:Key="ConnectorLocation">300,179.5 300,229.5</av:PointCollection>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
-        <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Leap Year or Not" sap:VirtualizedContainerService.HintSize="200,52" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Enter year" Title="Check Leap year">
+        <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Leap Year or Not" sap:VirtualizedContainerService.HintSize="334,239" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Enter the year" Title="Check Leap year">
           <ui:InputDialog.Result>
             <OutArgument x:TypeArguments="x:Int32">[Year]</OutArgument>
           </ui:InputDialog.Result>
