--- a/SourceCode/2023/August2023/Swapna/Task 4/Main.xaml
+++ b/SourceCode/2023/August2023/Swapna/Task 4/Main.xaml
@@ -157,7 +157,7 @@
                         <av:Size x:Key="ShapeSize">200,52</av:Size>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
-                    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="200,52" sap2010:WorkflowViewState.IdRef="WriteLine_2" Text="[Result]">
+                    <WriteLine DisplayName="Result" sap:VirtualizedContainerService.HintSize="200,52" sap2010:WorkflowViewState.IdRef="WriteLine_2" Text="[Result]">
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
                           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
